<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
  xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">
  <modelVersion>4.0.0</modelVersion>

  <groupId>com.mozilla.metrics</groupId>
  <artifactId>grouperfish</artifactId>
  <version>0.3-SNAPSHOT</version>

  <name>grouperfish</name>
  <description>Clustering engine for the web</description>
  <url>https://github.com/mozilla-metrics/grouperfish</url>

  <packaging>jar</packaging>

  <properties>
    <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
    <skip.tests>false</skip.tests>
  </properties>
  
  <repositories>
    <repository>
      <id>sonatype-nexus-public</id>
      <name>SonaType public snapshots and releases repository</name>
      <url>https://oss.sonatype.org/content/groups/public</url>
      <releases> 
        <enabled>true</enabled>
      </releases>
    </repository>
    
    <repository>
      <id>java.net</id>
      <url>http://download.java.net/maven/2</url>
      <name>java.net Maven Repository</name>
    </repository>
    
    <repository>
      <id>cdh.release.repo</id>
      <url>https://repository.cloudera.com/content/repositories/releases</url>
      <name>Cloudera Releases Repository</name>
      <snapshots><enabled>true</enabled></snapshots>
    </repository>
  </repositories>

  <dependencies>

    <!-- Jersey JAX-RS -->
    <dependency>
      <groupId>com.sun.jersey</groupId>
      <artifactId>jersey-bundle</artifactId>
      <version>1.8</version>
    </dependency>
    <dependency>
      <groupId>com.sun.jersey.contribs</groupId>
      <artifactId>jersey-multipart</artifactId>
      <version>1.8</version>
    </dependency>
    <dependency>
        <groupId>asm</groupId>
        <artifactId>asm</artifactId>
        <version>3.3.1</version>
        <scope>runtime</scope>
    </dependency>
    <dependency>
      <groupId>javax.servlet</groupId>
      <artifactId>servlet-api</artifactId>
      <version>2.5</version>
      <scope>provided</scope>
    </dependency>

    <dependency>
      <groupId>commons-codec</groupId>
      <artifactId>commons-codec</artifactId>
      <version>1.4</version>
    </dependency>

    <dependency>
      <groupId>junit</groupId>
      <artifactId>junit</artifactId>
      <version>3.8.1</version>
      <scope>test</scope>
    </dependency>

    <dependency>
      <groupId>com.googlecode.json-simple</groupId>
      <artifactId>json-simple</artifactId>
      <version>1.1</version>
    </dependency>

    <dependency>
      <groupId>org.testng</groupId>
      <artifactId>testng</artifactId>
      <version>5.6</version>
      <classifier>jdk15</classifier>
      <scope>test</scope>
    </dependency>


    <!-- All logging to logback (a slf4j impl)  -->
    <dependency>
      <groupId>org.slf4j</groupId>
      <artifactId>jcl-over-slf4j</artifactId>
      <version>1.5.11</version>
    </dependency>

    <dependency>
      <groupId>org.slf4j</groupId>
      <artifactId>log4j-over-slf4j</artifactId>
      <version>1.5.11</version>
    </dependency>

    <dependency>
      <groupId>org.slf4j</groupId>
      <artifactId>slf4j-api</artifactId>
      <version>1.5.11</version>
    </dependency>
    
    <dependency>
      <groupId>ch.qos.logback</groupId>
      <artifactId>logback-classic</artifactId>
      <version>0.9.20</version>
    </dependency>

    <dependency>
      <groupId>ch.qos.logback</groupId>
      <artifactId>logback-core</artifactId>
      <version>0.9.20</version>
    </dependency>
        
    <dependency>
      <groupId>org.slf4j</groupId>
      <artifactId>slf4j-log4j12</artifactId>
      <version>1.5.8</version>
      <scope>provided</scope>
    </dependency>

    <dependency>
      <groupId>org.slf4j</groupId>
      <artifactId>slf4j-jcl</artifactId>
      <version>1.5.8</version>
      <scope>provided</scope>
    </dependency>

    <dependency>
      <groupId>commons-logging</groupId>
      <artifactId>commons-logging</artifactId>
      <version>1.1.1</version>
      <scope>provided</scope>
    </dependency>

    <dependency>
      <groupId>log4j</groupId>
      <artifactId>log4j</artifactId>
      <version>1.2.16</version>
      <scope>provided</scope>
    </dependency>
    <!-- End of logging configuration. -->

    <dependency>
        <groupId>cybozulabs</groupId>
        <artifactId>langdetect</artifactId>
        <version>05-09-2011</version>
        <scope>system</scope>
        <systemPath>${basedir}/lib/langdetect.jar</systemPath>
    </dependency>
    
    <dependency>
        <groupId>org.apache.mahout</groupId>
        <artifactId>mahout-core</artifactId>
        <version>0.5</version>
    </dependency>
    <dependency>
        <groupId>org.apache.mahout</groupId>
        <artifactId>mahout-utils</artifactId>
        <version>0.5</version>
    </dependency>
    
    <dependency>
        <groupId>org.apache.pig</groupId>
        <artifactId>pig</artifactId>
        <version>0.8.0-cdh3u0</version>
    </dependency>
    
    <!-- OpenCloud -->
    <dependency>
        <groupId>org.mcavallo</groupId>
        <artifactId>opencloud</artifactId>
        <version>0.2</version>
        <scope>system</scope>
        <systemPath>${basedir}/lib/opencloud-0.2.jar</systemPath>
    </dependency>

    <dependency>
        <groupId>com.mozilla.metrics</groupId>
        <artifactId>akela</artifactId>
        <version>0.2-SNAPSHOT</version>
        <scope>system</scope>
        <systemPath>${basedir}/lib/akela-0.2-SNAPSHOT.jar</systemPath>
    </dependency>

    
  </dependencies>

  <build>
    <finalName>grouperfish</finalName>
    <plugins>
      <plugin>
        <groupId>org.apache.maven.plugins</groupId>
        <artifactId>maven-surefire-plugin</artifactId>
        <version>2.5</version>
        <configuration>
          <skip>${skip.tests}</skip>
          <argLine>-Xms128m -Xmx768m -XX:PermSize=128m -XX:MaxPermSize=512m</argLine>
          <parallel>false</parallel>
          <suiteXmlFiles>
            <suiteXmlFile>src/test/resources/testng.xml</suiteXmlFile>
          </suiteXmlFiles>
        </configuration>
      </plugin>

      <plugin>
        <groupId>org.apache.maven.plugins</groupId>
        <artifactId>maven-compiler-plugin</artifactId>
        <version>2.3.2</version>
        <configuration>
          <source>1.6</source>
          <target>1.6</target>
        </configuration>
      </plugin>

      <plugin>
        <groupId>org.apache.maven.plugins</groupId>
        <artifactId>maven-jar-plugin</artifactId>
        <version>2.3.1</version>
        <configuration>
          <finalName>${project.name}-${project.version}</finalName>
          <archive>
            <manifest>
              <addClasspath>true</addClasspath>
              <classpathPrefix>${settings.localRepository}</classpathPrefix>
              <classpathLayoutType>repository</classpathLayoutType>
              <mainClass>com.mozilla.grouperfish.cli.Grouperfish</mainClass>
            </manifest>
          </archive>
        </configuration>
      </plugin>
    </plugins>
  </build>

</project>
